--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "cd server && npm run dev",
-    "client:dev": "cd client && npm start",
+    "client:dev": "cd client && npm run dev",
     "build": "cd client && npm run build",
     "server:build": "cd server && npm run build",
     "install:all": "npm install && cd client && npm install && cd ../server && npm install",
-    "clean": "rm -rf client/node_modules server/node_modules node_modules",
-    "test:local": "echo 'Starting local network test servers...' && npm run dev",
+    "clean": "if exist client\\node_modules rmdir /s /q client\\node_modules && if exist server\\node_modules rmdir /s /q server\\node_modules && if exist node_modules rmdir /s /q node_modules",
+    "clean:unix": "rm -rf client/node_modules server/node_modules node_modules",
+    "test:local": "echo Starting local network test servers... && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/00sea/hex-pathgame.git"
   },
-  "keywords": [],
+  "keywords": ["game", "multiplayer", "strategy", "hex-grid"],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
