--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "dev:network": "concurrently \"npm run server:dev\" \"npm run client:dev:network\"",
     "server:dev": "cd server && npm run dev",
     "client:dev": "cd client && npm run dev",
+    "client:dev:network": "cd client && npm run dev:network",
     "build": "cd client && npm run build",
     "server:build": "cd server && npm run build",
     "install:all": "npm install && cd client && npm install && cd ../server && npm install",
     "clean": "if exist client\\node_modules rmdir /s /q client\\node_modules && if exist server\\node_modules rmdir /s /q server\\node_modules && if exist node_modules rmdir /s /q node_modules",
     "clean:unix": "rm -rf client/node_modules server/node_modules node_modules",
-    "test:local": "echo Starting local network test servers... && npm run dev",
+    "test:local": "echo Starting local test servers... && npm run dev",
+    "test:network": "echo Starting network test servers... && npm run dev:network",
+    "preview": "cd client && npm run preview",
+    "type-check": "cd client && npm run type-check && cd ../server && npx tsc --noEmit",
+    "lint": "cd client && npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
